--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="social-media">
                     <a href="https://www.facebook.com/share/1BhdhpQKEM/"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://www.instagram.com/lekxaa_?igsh=MWtkMTRmNTcwaHJsNw=="><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="https://youtube.com/@alexamacapanas5126?si=KGpeBVGej6iQc-I_"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
